--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <p>interactive media design</p>
  <p>040989807</p> 
  <p>wilc0060</p>
-  <p>i learnt how to play the paino</p>
+  <p>I learnt how to play the paino</p>
  </body> 
 </html>
