finishing the index.html

--- a/Landing-page/index.html
+++ b/Landing-page/index.html
@@ -10,28 +10,54 @@
 </head>
 
 <body>
+    <img src="image/logo/logo.png" alt="logo">
 <main>
-<h1>Want to be your own boss</h1>
-<p>start today and make up to $30/hr driving your own vehicle with dash</p>
-<form class="contact-form">
-    <div class="contact-form-section">
-      <label class="contact-form-label">First name</label>
-      <input class="contact-form-input" type="text">
+<h1>Want to be your own boss?</h1>
+<p>start today and make up to $30/hr driving your own vehicle with dash!</p>
+<form class="registration-form">
+    <div class="registration-form-section">
+        <h1>Register</h1>
+        <p>Enter your info to get started.</p>
+      <label class="registration-form-label">First name</label>
+      <input class="registration-form-input" type="text">
     </div>
-    <div class="contact-form-section">
-        <label class="contact-form-label">Last name</label>
-        <input class="contact-form-input" type="text">
+    <div class="registration-formsection">
+        <label class="registration-form-label">Last name</label>
+        <input class="registration-form-input" type="text">
       </div>
-    <div class="contact-form-section">
-      <label class="contact-form-label">Email</label>
-      <input class="contact-form-input" type="email">
+    <div class="registration-form-section">
+      <label class="registration-form-label">Email</label>
+      <input class="registration-form-input" type="email">
     </div>
-    <div class="contact-form-section">
-      <label class="contact-form-label">phone number</label>
-      <textarea class="contact-form-input"></textarea>
+    <div class="registration-form-section">
+      <label class="registration-form-label">Phone number</label>
+      <input class="registration-form-input"></input>
     </div>
-    <button type="submit">Send Message</button>
+    <input type="checkbox" id="terms" name="terms" value="agreement terms">
+  <label for="terms"> I agree to Dash terms</label><br>
+  <!-- Add a cta button here -->
+  <button type="button">DRIVE WITH US</button>
+  <p>Already applied <a href="#">check your application status here</a>.</p>
   </form>
 </section>
 </main>
+<footer>
+    <p>See how much you can earn with Dash.</p>
+    <p>how many hiurss do you want to drive with us this week?</p>
+    <form>
+        <div>
+        <label for="hours">Hours:</label><br>
+        <input type="text" id="hours" name="hours">
+    </div>
+    <div>
+        <label for="text">City</label><br>
+        <input type="text" id="hours" name="city">
+    </div>
+    <button type="button">Calculate</button>
+    <img src="image/icons/instagram.svg" alt="instagram icon">
+    <img src="image/icons/twitter.svg" alt="twitter icon">
+    <img src="image/icons/facebook.svg" alt="facebook icon">
+    <img src="image/icons/linkedin.svg" alt="linkedin icon">
+</form>
+  </footer>
 </body>
