fixing some spelling issue

--- a/Landing-page/index.html
+++ b/Landing-page/index.html
@@ -43,7 +43,7 @@
 </main>
 <footer>
     <p>See how much you can earn with Dash.</p>
-    <p>how many hiurss do you want to drive with us this week?</p>
+    <p>how many hours do you want to drive with us this week?</p>
     <form>
         <div>
         <label for="hours">Hours:</label><br>
