editing the size of the logo

--- a/Landing-page/index.html
+++ b/Landing-page/index.html
@@ -10,18 +10,18 @@
 </head>
 
 <body>
-  <img src="image/logo/logo.png" alt="logo">
+  <img class="logo-image" src="image/logo/logo.png" alt="logo">
   <main>
     <h1>Want to be your own boss?</h1>
     <p>start today and make up to $30/hr driving your own vehicle with dash!</p>
     <form>
       <div>
-        <h1>Register</h1>
-        <p>Enter your info to get started.</p>
+        <h2>Apply Now</h2>
+        <p>Enter your info below to get started.</p>
         <label for="firstname"></label>
         <input placeholder="firstname" type="text" id="firstname">
       </div>
-      <div >
+      <div>
         <label for="lastname"></label>
         <input placeholder="lastName" type="text" id="lastname">
       </div>
@@ -34,7 +34,7 @@
         <input placeholder="Phonenumber" type="tel" id="phone">
       </div>
       <input type="checkbox" id="terms" name="terms" value="agreement terms">
-      <label for="terms"> I agree to Dash terms</label><br>
+      <label for="terms"> I agree to dash terms</label><br>
       <!-- Add a cta button here -->
       <button type="button">DRIVE WITH US</button>
       <p>Already applied <a href="#">check your application status here</a>.</p>
@@ -60,4 +60,5 @@
     </form>
   </footer>
 </body>
+
 </html>
