adding colors to the footer and the main section

--- a/Landing-page/index.html
+++ b/Landing-page/index.html
@@ -10,36 +10,39 @@
 </head>
 
 <body>
-  <img class="logo-image" src="image/logo/logo.png" alt="logo">
-  <main>
-    <h1>Want to be your own boss?</h1>
-    <p>start today and make up to $30/hr driving your own vehicle with dash!</p>
-    <form>
-      <div>
-        <h2>Apply Now</h2>
-        <p>Enter your info below to get started.</p>
-        <label for="firstname"></label>
-        <input placeholder="firstname" type="text" id="firstname">
-      </div>
-      <div>
-        <label for="lastname"></label>
-        <input placeholder="lastName" type="text" id="lastname">
-      </div>
-      <div>
-        <label for="email"></label>
-        <input placeholder="email" type="email" id="email">
-      </div>
-      <div>
-        <label for="phone"></label>
-        <input placeholder="Phonenumber" type="tel" id="phone">
-      </div>
-      <input type="checkbox" id="terms" name="terms" value="agreement terms">
-      <label for="terms"> I agree to dash terms</label><br>
-      <!-- Add a cta button here -->
-      <button type="button">DRIVE WITH US</button>
-      <p>Already applied <a href="#">check your application status here</a>.</p>
-    </form>
-  </main>
+  <div class="container">
+    <img class="logo-image" src="image/logo/logo.png" alt="logo">
+    <main id="main" class="main">
+      <h1>Want to be your own boss?</h1>
+      <p>start today and make up to $30/hr driving your own vehicle with dash!</p>
+      <img class="scooter-girl" src="image/bg-image/scooter.svg" alt="a girl on a scooter">
+      <form class="apply-form">
+        <div>
+          <h2>Apply Now</h2>
+          <p>Enter your info below to get started.</p>
+          <label for="firstname"></label>
+          <input placeholder="firstname" type="text" id="firstname">
+        </div>
+        <div>
+          <label for="lastname"></label>
+          <input placeholder="lastName" type="text" id="lastname">
+        </div>
+        <div>
+          <label for="email"></label>
+          <input placeholder="email" type="email" id="email">
+        </div>
+        <div>
+          <label for="phone"></label>
+          <input placeholder="Phonenumber" type="tel" id="phone">
+        </div>
+        <input type="checkbox" id="terms" name="terms" value="agreement terms">
+        <label for="terms"> I agree to dash terms</label><br>
+        <!-- Add a cta button here -->
+        <button type="button">DRIVE WITH US</button>
+        <p>Already applied <a href="#">check your application status here</a>.</p>
+      </form>
+    </main>
+  </div>
   <footer>
     <p>See how much you can earn with Dash.</p>
     <p>how many hours do you want to drive with us this week?</p>
