--- a/Landing-page/index.html
+++ b/Landing-page/index.html
@@ -20,25 +20,25 @@
         <div>
           <h2>Apply Now</h2>
           <p>Enter your info below to get started.</p>
-          <label for="firstname"></label>
-          <input placeholder="firstname" type="text" id="firstname">
+          <label for="Firstname"></label>
+          <input placeholder="Firstname" type="text" id="Firstname">
         </div>
         <div>
-          <label for="lastname"></label>
-          <input placeholder="lastName" type="text" id="lastname">
+          <label for="Lastname"></label>
+          <input placeholder="LastName" type="text" id="Lastname">
         </div>
         <div>
-          <label for="email"></label>
-          <input placeholder="email" type="email" id="email">
+          <label for="Email"></label>
+          <input placeholder="Email" type="Email" id="Email">
         </div>
         <div>
-          <label for="phone"></label>
-          <input placeholder="Phonenumber" type="tel" id="phone">
+          <label for="Phone"></label>
+          <input placeholder="Phonenumber" type="tel" id="Phone">
         </div>
         <input type="checkbox" id="terms" name="terms" value="agreement terms">
         <label for="terms"> I agree to dash terms</label><br>
         <!-- Add a cta button here -->
-        <button type="button">DRIVE WITH US</button>
+        <button class="drive"  type="button">DRIVE WITH US</button>
         <p>Already applied <a href="#">check your application status here</a>.</p>
       </form>
     </main>
@@ -48,14 +48,14 @@
     <p>how many hours do you want to drive with us this week?</p>
     <form>
       <div>
-        <label for="hours"></label><br>
-        <input placeholder="hours" id="hours"><br>
+        <label for="Hours"></label><br>
+        <input placeholder="Hours" id="Hours"><br>
       </div>
       <div>
-        <label for="city"></label><br>
-        <input placeholder="city" id="city"><br>
+        <label for="City"></label><br>
+        <input placeholder="City" id="City"><br>
       </div>
-      <button type="button">Calculate</button>
+      <button class="calc" type="button">Calculate</button>
       <img src="image/icons/instagram.svg" alt="instagram icon">
       <img src="image/icons/twitter.svg" alt="twitter icon">
       <img src="image/icons/facebook.svg" alt="facebook icon">
