--- a/Landing-page/index.html
+++ b/Landing-page/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Landing Page</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -33,20 +35,20 @@
         </div>
         <div>
           <label for="Phone"></label>
-          <input placeholder="Phonenumber" type="tel" id="Phone">
+          <input placeholder="Phonenumber" type="tel" id="phone">
         </div>
         <input type="checkbox" id="terms" name="terms" value="agreement terms">
         <label for="terms"> I agree to dash terms</label><br>
         <!-- Add a cta button here -->
-        <button class="drive"  type="button">DRIVE WITH US</button>
+        <button class="drive" type="button">DRIVE WITH US</button>
         <p>Already applied <a href="#">check your application status here</a>.</p>
       </form>
     </main>
   </div>
   <footer>
-    <p>See how much you can earn with Dash.</p>
+    <h3>See how much you can earn with Dash.</h3>
     <p>how many hours do you want to drive with us this week?</p>
-    <form>
+    <div class="footer-container">
       <div>
         <label for="Hours"></label><br>
         <input placeholder="Hours" id="Hours"><br>
@@ -56,11 +58,13 @@
         <input placeholder="City" id="City"><br>
       </div>
       <button class="calc" type="button">Calculate</button>
+    </div>
+    <div class="socialmedia-icon">
       <img src="image/icons/instagram.svg" alt="instagram icon">
       <img src="image/icons/twitter.svg" alt="twitter icon">
       <img src="image/icons/facebook.svg" alt="facebook icon">
       <img src="image/icons/linkedin.svg" alt="linkedin icon">
-    </form>
+    </div>
   </footer>
 </body>
 
