adding media query to my css

--- a/Landing-page/index.html
+++ b/Landing-page/index.html
@@ -7,6 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Landing Page</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,700&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
@@ -36,7 +38,7 @@
           <input placeholder="Email" type="Email" id="Email">
         </div>
         <div>
-          <label for="Phone"></label>
+          <label for="phone"></label>
           <input placeholder="Phonenumber" type="tel" id="phone">
         </div>
         <input type="checkbox" id="terms" name="terms" value="agreement terms">
@@ -62,10 +64,10 @@
       <button class="calc" type="button">Calculate</button>
     </div>
     <div class="socialmedia-icon">
-      <img src="image/icons/instagram.svg" alt="instagram icon">
-      <img src="image/icons/twitter.svg" alt="twitter icon">
-      <img src="image/icons/facebook.svg" alt="facebook icon">
       <img src="image/icons/linkedin.svg" alt="linkedin icon">
+      <img src="image/icons/facebook.svg" alt="facebook icon">
+      <img src="image/icons/twitter.svg" alt="twitter icon">
+      <img src="image/icons/instagram.svg" alt="instagram icon">
     </div>
   </footer>
 </body>
