fixing the grid layout for desktop

--- a/Landing-page/index.html
+++ b/Landing-page/index.html
@@ -49,7 +49,7 @@
       </form>
     </main>
   </div>
-  <footer>
+  <footer class="footer" id="footer">
     <h3>See how much you can earn with Dash.</h3>
     <p>how many hours do you want to drive with us this week?</p>
     <div class="footer-container">
@@ -61,7 +61,7 @@
         <label for="City"></label><br>
         <input placeholder="City" id="City"><br>
       </div>
-      <button class="calc" type="button">Calculate</button>
+      <button id="Calc" class="Calc">Calculate</button>
     </div>
     <div class="socialmedia-icon">
       <img src="image/icons/linkedin.svg" alt="linkedin icon">
