--- a/Landing-page/index.html
+++ b/Landing-page/index.html
@@ -18,14 +18,14 @@
 <body>
   <div class="container">
     <img class="logo-image" src="image/logo/logo.png" alt="logo">
-    <main id="main" class="main">
+    <main id="main-content" class="main">
       <h1>Want to be your own boss?</h1>
       <p>start today and make up to $30/hr driving your own vehicle with dash!</p>
       <img class="scooter-girl" src="image/bg-image/scooter.svg" alt="a girl on a scooter">
       <form class="apply-form">
         <div>
           <h2>Apply Now</h2>
-          <p>Enter your info below to get started.</p>
+          <p>Enter your info below</p>
           <label for="Firstname"></label>
           <input placeholder="Firstname" type="text" id="Firstname">
         </div>
@@ -45,7 +45,7 @@
         <label for="terms"> I agree to dash terms</label><br>
         <!-- Add a cta button here -->
         <button class="drive" type="button">DRIVE WITH US</button>
-        <p>Already applied <a href="#">check your application status here</a>.</p>
+        <p>Already applied <a href="#">Check your application status here</a>.</p>
       </form>
     </main>
   </div>
@@ -54,14 +54,12 @@
     <p>how many hours do you want to drive with us this week?</p>
     <div class="footer-container">
       <div>
-        <label for="Hours"></label><br>
-        <input placeholder="Hours" id="Hours"><br>
+        <input placeholder="Hours" id="Hours">
       </div>
       <div>
-        <label for="City"></label><br>
-        <input placeholder="City" id="City"><br>
+        <input placeholder="City" id="City">
       </div>
-      <button id="Calc" class="Calc">Calculate</button>
+      <button id="calculate-button" class="calc">Calculate</button>
     </div>
     <div class="socialmedia-icon">
       <img src="image/icons/linkedin.svg" alt="linkedin icon">
