--- a/Landing-page/index.html
+++ b/Landing-page/index.html
@@ -7,6 +7,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Landing Page</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,700&display=swap" rel="stylesheet">
@@ -19,13 +23,13 @@
   <div class="container">
     <img class="logo-image" src="image/logo/logo.png" alt="logo">
     <main id="main-content" class="main">
-      <h1>Want to be your own boss?</h1>
-      <p>start today and make up to $30/hr driving your own vehicle with dash!</p>
+      <h1 id="header">Want to be your own boss?</h1>
+      <p class="p1">start today and make up to $30/hr driving your own vehicle with dash!</p>
       <img class="scooter-girl" src="image/bg-image/scooter.svg" alt="a girl on a scooter">
       <form class="apply-form">
         <div>
           <h2>Apply Now</h2>
-          <p>Enter your info below</p>
+          <p class="p2">Enter your info below</p>
           <label for="Firstname"></label>
           <input placeholder="Firstname" type="text" id="Firstname">
         </div>
@@ -42,16 +46,16 @@
           <input placeholder="Phonenumber" type="tel" id="phone">
         </div>
         <input type="checkbox" id="terms" name="terms" value="agreement terms">
-        <label for="terms"> I agree to dash terms</label><br>
+        <label class="label" for="terms"> I agree to dash terms</label><br>
         <!-- Add a cta button here -->
         <button class="drive" type="button">DRIVE WITH US</button>
-        <p>Already applied <a href="#">Check your application status here</a>.</p>
+        <p class="p3">Already applied <a href="#">Check your application status here</a>.</p>
       </form>
     </main>
   </div>
   <footer class="footer" id="footer">
     <h3>See how much you can earn with Dash.</h3>
-    <p>how many hours do you want to drive with us this week?</p>
+    <p class="p4">how many hours do you want to drive with us this week?</p>
     <div class="footer-container">
       <div>
         <input placeholder="Hours" id="Hours">
