changing the scooter image into a css background-image

--- a/Landing-page/index.html
+++ b/Landing-page/index.html
@@ -25,7 +25,7 @@
     <main id="main-content" class="main">
       <h1 id="header">Want to be your own boss?</h1>
       <p class="p1">start today and make up to $30/hr driving your own vehicle with dash!</p>
-      <img class="scooter-girl" src="image/bg-image/scooter.svg" alt="a girl on a scooter">
+      <!-- <img class="scooter-girl" src="image/bg-image/scooter.svg" alt="a girl on a scooter"> -->
       <form class="apply-form">
         <div>
           <h2>Apply Now</h2>
