--- a/midterm/index.html
+++ b/midterm/index.html
@@ -6,63 +6,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>mtm6201-Midterm</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <!-- comment block - control + / or command + /-->
     <!-- Site header  -->
-    <div class="container">
-        <header>
-            <img src="./mtm6201-midterm-master-files/images/logo.svg" alt="Algonquin logo-image">
-            <nav>
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="contact.html">CONTACT</a></li>
-                    <li><a href="story.html">STORY</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <!-- Starting the main content of the page -->
-            <h1>Discover Your ARC.</h1>
-            <P>With Algonquin College newest facilitys, there's always something for everyone to discover and enjoy</P>
-            <i class="fas fa-bowling-ball">Bowling</i>
-            <i class="fas fa-dumbbell">Fitness Center</i>
-            <i class="fas fa-basketball-ball">Indoor court</i>
-            <button type="button">Get Started</button>
-            <img src="./mtm6201-midterm-master-files/images/discover.svg" alt=" A girl reading a book">
-            <i class='fas fa-arrow-alt-circle-down'>Scroll</i>
-            <img src="./mtm6201-midterm-master-files/images/school.jpg" alt="Graduation">
-            <h2>Discover</h2>
-            <h3>Algonquin College</h3>
-            <p>of Applied Art and Technology is a publiciy funded English Language college located in Ottawa, Ontario,
-                Canada. The college serves the National Capital Region and the outlying areas of Eastern Ontario,
-                Western Quebec, and upstate New york</p>
-            <button type="button">Learn More</button>
-            <img src="./mtm6201-midterm-master-files/images/simon.jpg" alt="A girl named simon">
-            <h2>Dijanelle Siomon SA President</h2>
-            <p>"Only with increased capacity can we expand and create a more inclusive program that attracts a greater
-                number of student to partcipate in physical and social activity.The Student Association is commiteed to
-                focus on programming that result in out students taking person ownership for their health"</p>
-            <img src="./mtm6201-midterm-master-files/images/entertainment.jpg" alt="People drinking bar">
-            <h2>Discover</h2>
-            <h3>The Entertainment</h3>
-            <p>at Algonquin college is endless. We currently have the algonquin common theater where we hosst varity of
-                events. Now with the coming ARC facilitys, not only will it be providing more space for the students to
-                study, but it will also be bringing roome for latenight entertainment</p>
-            <button type="button">Learn More</button>
-        </main>
-        <div class="footer-container">
-            <h4>Follow Us</h4>
-            <div class="socialmedia-icon"></div>
-            <img src="./mtm6201-midterm-master-files/icons/facebook.svg" alt="facebook">
-            <img src="./mtm6201-midterm-master-files/icons/instagram.svg" alt="instagram">
-            <img src="./mtm6201-midterm-master-files/icons/twitter.svg" alt="twitter">
-            <img src="./mtm6201-midterm-master-files/icons/youtube.svg" alt="youtube">
-            <img src="./mtm6201-midterm-master-files/icons/arrow.svg" alt="arrow">
-        </div>
+    <header id="header" class="head">
+        <img class="logo-image" src="./mtm6201-midterm-master-files/images/logo.svg" alt="Algonquin logo-image">
+        <nav>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+                <li><a href="contact.html">CONTACT</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <!-- Starting the main content of the page -->
+        <h1>Discover Your ARC.</h1>
+        <P>With Algonquin College newest facilitys, there's always something for everyone to discover and enjoy</P>
+        <i class="fas fa-bowling-ball">Bowling</i>
+        <i class="fas fa-dumbbell">Fitness Center</i>
+        <i class="fas fa-basketball-ball">Indoor court</i>
+        <button type="button">Get Started</button>
+        <img src="./mtm6201-midterm-master-files/images/discover.svg" alt=" A girl reading a book">
+        <i class='fas fa-arrow-alt-circle-down'>Scroll</i>
+        <img src="./mtm6201-midterm-master-files/images/school.jpg" alt="Graduation">
+        <h2>Discover</h2>
+        <h3>Algonquin College</h3>
+        <p>of Applied Art and Technology is a publiciy funded English Language college located in Ottawa, Ontario,
+            Canada. The college serves the National Capital Region and the outlying areas of Eastern Ontario,
+            Western Quebec, and upstate New york</p>
+        <button type="button">Learn More</button>
+        <img src="./mtm6201-midterm-master-files/images/simon.jpg" alt="A girl named simon">
+        <h2>Dijanelle Siomon SA President</h2>
+        <p>"Only with increased capacity can we expand and create a more inclusive program that attracts a greater
+            number of student to partcipate in physical and social activity.The Student Association is commiteed to
+            focus on programming that result in out students taking person ownership for their health"</p>
+        <img src="./mtm6201-midterm-master-files/images/entertainment.jpg" alt="People drinking bar">
+        <h2>Discover</h2>
+        <h3>The Entertainment</h3>
+        <p>at Algonquin college is endless. We currently have the algonquin common theater where we hosst varity of
+            events. Now with the coming ARC facilitys, not only will it be providing more space for the students to
+            study, but it will also be bringing roome for latenight entertainment</p>
+        <button type="button">Learn More</button>
+        <footer>
+            <div>
+                <h4>Follow Us</h4>
+                <div class="socialmedia-icon"></div>
+                <img src="./mtm6201-midterm-master-files/icons/facebook.svg" alt="facebook">
+                <img src="./mtm6201-midterm-master-files/icons/instagram.svg" alt="instagram">
+                <img src="./mtm6201-midterm-master-files/icons/twitter.svg" alt="twitter">
+                <img src="./mtm6201-midterm-master-files/icons/youtube.svg" alt="youtube">
+                <img src="./mtm6201-midterm-master-files/icons/arrow.svg" alt="arrow">
+            </div>
         </footer>
+    </main>
 </body>
 
 </html>
