--- a/midterm/index.html
+++ b/midterm/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>mtm6201-Midterm</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -30,8 +30,8 @@
         <i class="fas fa-bowling-ball">Bowling</i>
         <i class="fas fa-dumbbell">Fitness Center</i>
         <i class="fas fa-basketball-ball">Indoor court</i>
-        <button type="button">Get Started</button>
-        <img src="./mtm6201-midterm-master-files/images/discover.svg" alt=" A girl reading a book">
+        <button class="start" type="button">Get Started</button>
+        <img class="girl" src="./mtm6201-midterm-master-files/images/discover.svg" alt=" A girl reading a book">
         <i class='fas fa-arrow-alt-circle-down'>Scroll</i>
         <img src="./mtm6201-midterm-master-files/images/school.jpg" alt="Graduation">
         <h2>Discover</h2>
