resizing images for mobile mockup

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -33,7 +33,7 @@
         <button class="start" type="button">Get Started</button>
         <img class="girl" src="./mtm6201-midterm-master-files/images/discover.svg" alt=" A girl reading a book">
         <i class='fas fa-arrow-alt-circle-down'>Scroll</i>
-        <img src="./mtm6201-midterm-master-files/images/school.jpg" alt="Graduation">
+        <img class="grad" src="./mtm6201-midterm-master-files/images/school.jpg" alt="Graduation">
         <h2>Discover</h2>
         <h3>Algonquin College</h3>
         <p>of Applied Art and Technology is a publiciy funded English Language college located in Ottawa, Ontario,
