adding id and resizing images

--- a/midterm/index.html
+++ b/midterm/index.html
@@ -39,20 +39,23 @@
         <p>of Applied Art and Technology is a publiciy funded English Language college located in Ottawa, Ontario,
             Canada. The college serves the National Capital Region and the outlying areas of Eastern Ontario,
             Western Quebec, and upstate New york</p>
-        <button type="button">Learn More</button>
-        <img src="./mtm6201-midterm-master-files/images/simon.jpg" alt="A girl named simon">
-        <h2>Dijanelle Siomon SA President</h2>
-        <p>"Only with increased capacity can we expand and create a more inclusive program that attracts a greater
-            number of student to partcipate in physical and social activity.The Student Association is commiteed to
-            focus on programming that result in out students taking person ownership for their health"</p>
-        <img src="./mtm6201-midterm-master-files/images/entertainment.jpg" alt="People drinking bar">
+        <button class="learn" type="button">Learn More</button>
+        <div class="container">
+            <img id="simon" src="./mtm6201-midterm-master-files/images/simon.jpg" alt="A girl named simon">
+            <h2 class="pres">Dijanelle Siomon SA President</h2>
+            <p class="p1">"Only with increased capacity can we expand and create a more inclusive program that attracts
+                a greater
+                number of student to partcipate in physical and social activity.The Student Association is commiteed to
+                focus on programming that result in out students taking person ownership for their health"</p>
+        </div>
+        <img id="bar" src="./mtm6201-midterm-master-files/images/entertainment.jpg" alt="People drinking beer">
         <h2>Discover</h2>
         <h3>The Entertainment</h3>
         <p>at Algonquin college is endless. We currently have the algonquin common theater where we hosst varity of
             events. Now with the coming ARC facilitys, not only will it be providing more space for the students to
             study, but it will also be bringing roome for latenight entertainment</p>
-        <button type="button">Learn More</button>
-        <footer>
+        <button id="More" type="button">Learn More</button>
+        <footer id="footer-container" class="footer">
             <div>
                 <h4>Follow Us</h4>
                 <div class="socialmedia-icon"></div>
