--- a/midterm/index.html
+++ b/midterm/index.html
@@ -28,9 +28,14 @@
         <!-- Starting the main content of the page -->
         <h1>Discover Your ARC.</h1>
         <P>With Algonquin College newest facilitys, there's always something for everyone to discover and enjoy</P>
-        <i class="fas fa-bowling-ball">Bowling</i>
-        <i class="fas fa-dumbbell">Fitness Center</i>
-        <i class="fas fa-basketball-ball">Indoor court</i>
+        <div class="icon">
+            <i class="fas fa-bowling-ball"></i>
+            <h3>Bowling</h3>
+            <i class="fas fa-dumbbell"></i>
+            <h3>Fitness Center</h3>
+            <i class="fas fa-basketball-ball"></i>
+            <h3>Indoor court</h3>
+        </div>
         <button class="start" type="button">Get Started</button>
         <img class="girl" src="./mtm6201-midterm-master-files/images/discover.svg" alt=" A girl reading a book">
         <i class='fas fa-arrow-alt-circle-down'>Scroll</i>
